Bug 1806438 - Notify of fullscreen changes from SetSizeModeInternal. r=rkraesig

I could repro this on my Windows laptop but not on my Windows desktop
machine. Why? I'm not sure.

In any case, dispatching fullscreen changes to Gecko based on
the size mode rather than mFullScreenMode is:

 * What other platforms do.
 * What the taskbar concealer (per comment 8) and probably also other
   code expects.
 * Generally saner? The notification order before the regression didn't
   quite make sense, and can end up making other code think we're in
   fullscreen when minimized or what not. It's better to keep
   mFullScreenMode just this internal-to-nsWindow state that makes us
   end up with the right size mode when restoring windows.

Differential Revision: https://phabricator.services.mozilla.com/D165679